/*
    GSP for the TF blockchain game
    Copyright (C) 2020  Autonomous Worlds Ltd

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto2";
option cc_enable_arenas = true;

package pxd.proto;

message ExpeditionBlueprint
{
  /*Id*/
  optional string AuthoredId = 1;
    
  /*n*/
  optional string Name = 2;

  /*d*/
  optional int32 Duration = 3;  

  /*mis*/
  optional uint32 MinSweetness = 4; 

  /*mas*/
  optional uint32 MaxSweetness = 5;    
  
  /*mr*/
  optional uint32 MaxRewardQuality = 6;

  /*rt*/
  optional string BaseRewardsTableId = 7;

  /*rc*/
  optional int32 BaseRollCount = 8;    
}
