/*
    GSP for the TF blockchain game
    Copyright (C) 2020  Autonomous Worlds Ltd

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto2";
option cc_enable_arenas = true;

package pxd.proto;

message OngoinOperation
{
  /*Total block count left to perform the operation*/
  optional uint32 BlocksLeft = 1;   
  
  /*Enum OngoinType of the operation*/
  optional uint32 Type = 2; 

  /*Enum RecipeID of the operation*/
  optional uint32 RecipeID = 3;     
  
  /*Enum FighterDatabaseID of the operation*/
  optional uint32 FighterDatabaseID = 4;  

  /*Enum ExpeditionBlueprintID of the operation*/
  optional string ExpeditionBlueprintID = 5;    
  
  /*Enum appliedGoodyKeyName of the operation*/
  optional string AppliedGoodyKeyName = 6;    
  
  /*Enum ItemDatabaseID of the operation*/
  optional string ItemDatabaseID = 7;      
}
